--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
+    "googleapis": "^95.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.3"
+    "mongodb": "^4.4.0",
+    "mongoose": "^6.2.3",
+    "nodemailer": "^6.7.2"
   }
 }
